--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body> 
-    <body>
-     
+ <html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="styles.css">
+     <title>Вход - Bomes</title>
+ </head>
+ <body>
      <form>
          <h1>Bomes</h1>
          <h2>Вход в аккаунт</h2>
@@ -33,5 +32,6 @@
              <a href="login.html">Зарегистрироваться</a>
          </p>
      </form>
-</body>
-</html>
+ </body>
+ </html>
+ </html>
