--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
     
     <form>
-        <h1>Добро пожаловать в Bomess!</h1>
+        <h1>Добро пожаловать в Bomes!</h1>
         <p>Перед использованием , пожалуйста, зарегистрируйтесь.</p>
         <input
             class="name"
